# Rune

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  DEPLOY.md  INGEST.md  LICENSE  README.md  TESTS_IN_VIVO.md  TESTS_IN_VIVO_V5_5_X.md  deploy.sh  fix_30b.sh  ingest.py  launch.sh  pyproject.toml  run.py  searxng_bootstrap.sh  test.sh  trinity.yaml.example
bench/: run_bench.py  tasks.json
rune/: __init__.py  __main__.py  boot.py  cache.py  config.py  env.py  genlock.py  git_sync.py  hippocampe.py  hwprofile.py  logging_setup.py  microsleep.py  model.py  sessions.py  settings.py  soft_memory.py  telegram_bot.py  temporal.py  web.py
rune/agentic/: __init__.py  blackboard.py  blockage.py  ingest.py  mission_memory.py  orchestrator.py  progress.py  router.py  sandbox.py  skills.py  tools.py  verifier.py  workers.py
rune/agents/: __init__.py  _runtime.py  cron.py  hot_context.py  subagent.py
rune/channels/: __init__.py  base.py  console.py  slack_channel.py  telegram_channel.py
rune/cli/: __init__.py  __main__.py  dashboard.py  dashboard_cc.py  main.py
rune/cognition/: __init__.py  auto_calibrator.py  cascade.py  cognitive_loop_rune.py  consolidation.py  consolidation_rune.py  crag.py  deep_reasoning.py  deliberation.py  encoding.py  generation.py  graph_communities.py  inhibition.py  mcp_integration.py  metacognition.py  metacognition_rune.py  planning.py  predictive_coding.py  reflection.py  retrieval.py  semantic_router.py  storage.py  surprise.py  surprise_rune.py  timeline.py  tool_dispatcher.py  vision_active.py  vision_semantic.py  warnings_v4.py  web_classifier.py
rune/cortex_ext/: __init__.py  integration.py
rune/mcp/: __init__.py  client.py  prerequisites.py  server_manager.py
rune/memory/: __init__.py  auto_skill.py  cognitive_state.py  failure_memory.py  health.py  kg.py  mhn.py  procedural.py  retrieval.py  salience.py  sdm.py  skill_composer.py  tiered_retriever.py  visual_working_memory.py  working_memory.py
rune/perf/: __init__.py  backend.py  mock.py  speculative.py  transformers_backend.py
rune/server/: __init__.py  app.py  auth.py  codegen.py  document_ingest.py  rate_limit.py  routes.py  schemas.py  workspace.py
rune/steering/: __init__.py  axes.py  engine.py  vectors.py
scripts/: check_document_deps.sh  install_node.sh
tests/: __init__.py  test_agentic.py  test_agents.py  test_api.py  test_auth.py  test_backend.py  test_blackboard.py  test_blockage.py  test_boot.py  test_cache.py  test_cascade.py  test_cascade_external.py  test_cascade_integration.py  test_codegen.py  test_cognitive_state.py  test_config_endpoints.py  test_consolidation.py  test_cross_encoder.py  test_deep_reasoning.py  test_deliberation.py  test_encoding.py  test_gemini_client.py  test_generation.py  test_git_sync.py  test_hippocampe.py  test_hippocampe_v4.py  test_hot_context_blackboard.py  test_hwprofile.py  test_ingest.py  test_inhibition.py  test_kg.py  test_kg_critical.py  test_kg_improved.py  test_loadability.py  test_memory.py  test_memory_health.py  test_metacognition.py  test_mhn.py  test_microsleep.py  test_microsleep_v41.py  (+35 more)
(+14 files in other folders)
