[project]
name = "rune"
version = "0.1.2"
description = "Rune — agent IA cognitif local, headless, open-weights only. Combine le cycle cognitif biomimétique de Lythea avec les capacités agentiques de Rune (auto-skill, subagents, cron)."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Rune project"}]
keywords = ["llm", "agent", "cognitive", "local", "open-source", "biomimetic"]

dependencies = [
    # ── Core ML / transformers ──────────────────────────────────────────
    "transformers>=5.5.0",
    "accelerate>=0.30",
    "huggingface_hub>=0.24",
    "torch>=2.0",
    "sentence-transformers>=3.0",
    "bitsandbytes>=0.43; platform_system=='Linux'",

    # ── Vector store / KG ───────────────────────────────────────────────
    "chromadb>=0.5",
    "gliner>=0.2",
    "rank-bm25>=0.2",
    "rapidfuzz>=3.0",
    "networkx>=3.0",
    "python-igraph>=0.11",
    "leidenalg>=0.10",
    "python-louvain>=0.16",

    # ── Web framework (headless) ────────────────────────────────────────
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.9",  # requis pour routes UploadFile (upload document)
    "pydantic>=2.10",
    "pydantic-settings>=2.0",
    "slowapi>=0.1.9",
    "httpx>=0.27",

    # ── CLI ─────────────────────────────────────────────────────────────
    "typer>=0.9",
    "rich>=13.0",

    # ── Rune specific ──────────────────────────────────────────
    "apscheduler>=3.10",
    "psutil>=5.9",
    "jsonschema>=4.20",
    "structlog>=24.1",

    # ── Web / search providers ─────────────────────────────────────────
    "ddgs",

    # ── Image / vision ─────────────────────────────────────────────────
    "pillow>=10.0",

    # ── Data manipulation ──────────────────────────────────────────────
    "numpy",
    "pandas",

    # ── Document ingestion ─────────────────────────────────────────────
    "pdfplumber>=0.10",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",

    # ── Utilitaires ─────────────────────────────────────────────────────
    "packaging>=23.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
channels = [
    "python-telegram-bot>=21.0",
    "slack-sdk>=3.27",
    "slack-bolt>=1.18",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
rune = "rune.cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rune*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    'ignore:builtin type \w+ has no __module__ attribute:DeprecationWarning',
    'ignore:Using `httpx` with `starlette.testclient` is deprecated:',
    'ignore:The `resume_download` argument is deprecated:UserWarning',
]
